--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,9 @@ vcsi
 wand
 wget
 youtube_dl
-
+py-Ultroid==2021.10.11.1
+pytgcalls==3.0.0.dev19
+https://github.com/New-dev0/Telethon/archive/Branch.zip
 git+https://github.com/sandy1709/Telethon
 git+https://github.com/goldsmith/Wikipedia
 git+https://github.com/sandy1709/py-googletrans
